--- a/aws/presigned_s3_upload_example/.gitignore
+++ b/aws/presigned_s3_upload_example/.gitignore
@@ -1,3 +1,30 @@
+## From create vite app
+# Logs
+logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
+
+node_modules
+dist
+dist-ssr
+*.local
+
+# Editor directories and files
+.vscode/*
+!.vscode/extensions.json
+.idea
+.DS_Store
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
+
+
 ## From https://github.com/github/gitignore/blob/main/Terraform.gitignore
 
 # Local .terraform directories
