feat(aws/presigned_s3_upload_example): Get aws iam creds from tf output

--- a/aws/presigned_s3_upload_example/Makefile
+++ b/aws/presigned_s3_upload_example/Makefile
@@ -1,5 +1,8 @@
 init plan apply destroy:
 	cd opentofu && tofu $@
 
+
 serve:
-	yarn run dev
+	@ VITE_IAM_USER=$(shell cd opentofu && tofu output -raw upload_user_access_key) \
+		VITE_IAM_KEY=$(shell cd opentofu && tofu output -raw upload_user_secret_key) \
+		yarn run dev
