feat(firebase_static_website): Yay frontend hosting

--- a/gcloud/firebase_static_website/.gitignore
+++ b/gcloud/firebase_static_website/.gitignore
@@ -63,3 +63,8 @@ override.tf.json
 # Ignore CLI configuration files
 .terraformrc
 terraform.rc
+
+## Firebase (just for this project)
+.firebase
+.firebaserc
+firebase.json
