docs(firebase_website_cloud_run_backend): Add README and .env.example

--- a/gcloud/firebase_website_cloud_run_backend/.env.example
+++ b/gcloud/firebase_website_cloud_run_backend/.env.example
@@ -4,3 +4,8 @@ TF_VAR_region=us-central1
 TF_VAR_billing_account=1234567-ABCDEFG-HIJKLMN
 TF_VAR_project_display_name=fb-fe-cr-be
 TF_VAR_firebase_site_id=fb-fe-cr-be
+TF_VAR_backend_repository_id=backend
+TF_VAR_backend_cloud_run_name=backend
+
+BACKEND_PORT=8080
+TF_VAR_backend_port=${BACKEND_PORT}
