Add test schema

--- a/cockroach/serverless-cockroachdb-sqitch/sqitch.conf
+++ b/cockroach/serverless-cockroachdb-sqitch/sqitch.conf
@@ -1,8 +1,8 @@
 [core]
 	engine = cockroach
-	# plan_file = sqitch.plan
-	# top_dir = .
-# [engine "cockroach"]
-	# target = db:cockroach:
-	# registry = sqitch
-	# client = psql
+	plan_file = sqitch.plan
+	top_dir = .
+[engine "cockroach"]
+	target = db:cockroach://kim:9uNLhr5hm2_7aRM3tpAeXg@sandbox-3404.jxf.gcp-asia-southeast1.cockroachlabs.cloud:26257/defaultdb?sslmode=verify-full
+	registry = sqitch
+	client = psql
