docs(cockroach/serverless-cockroachdb-sqitch): Add note about api key

--- a/cockroach/serverless-cockroachdb-sqitch/.env.example
+++ b/cockroach/serverless-cockroachdb-sqitch/.env.example
@@ -1,3 +1,4 @@
+# Your API key needs the Cluster Administrator role.
 COCKROACH_API_KEY=KEY_HERE
 TF_VAR_cluster_name=sandbox
 TF_VAR_regions='[{"name": "ap-southeast-1"}]'
